--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Baking App</string>
     <string name="ingredients">Ingredients</string>
     <string name="base_url">https://d17h27t6h515a5.cloudfront.net</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="your_recipe">Your Recipe</string>
 </resources>
